--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "eslint": "^5.14.0",
     "eslint-config-recommended": "^4.0.0",
     "express": "^4.16.4",
