--- a/package.json
+++ b/package.json
@@ -3,14 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "private": true,
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "dev": "next",
-    "build": "next build",
+    "build": "next build src",
     "start": "next start",
-    "server:dev": "nodemon server.js",
-    "server:prod": "NODE_ENV=production nodemon server.js",
-    "export": "next export"
+    "app:dev": "nodemon server.js",
+    "app:prod": "rm -rf src/.next && next build src && NODE_ENV=production node server.js"
   },
   "keywords": [],
   "author": "GlowSquid",
@@ -20,7 +19,6 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
-    "isomorphic-unfetch": "^3.0.0",
     "mongoose": "^5.5.2",
     "next": "^8.0.4",
     "react": "^16.8.6",
