--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,7 @@
   },
   "rules": {
     "no-console": "off",
+    "operator-linebreak": "off",
     "react/react-in-jsx-scope": "off",
     "indent": [
       "error",
